--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ header {
 
 footer {
     height: 260px;
-    background: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
+    background-color:#fff;
 }
 
     footer h1 {
